--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "expo-location": "~16.5.5",
     "expo-router": "~3.4.8",
     "expo-status-bar": "~1.11.1",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-image-slider-box": "^2.0.7",
+    "react-native-maps": "^1.14.0",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.6.2",
     "react-native-reanimated-carousel": "^3.5.1",
